Updated brandControllers.js
